@startuml

title __WISHLIST's Class Diagram__\n

  namespace com.example.keepmoneyv3 {
    namespace ui.wishlist {
      class com.example.keepmoneyv3.ui.wishlist.WishListsFragment {
          + onAttach()
          + onCreateView()
          - buildGridView()
          - buildWishListOptionsDialog()
          - getAllWishLists()
          - gridViewItemAction()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.wishlist {
      interface com.example.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener {
          {abstract} + confirmWishList()
          {abstract} + onWishListsFragmentOpened()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.wishlist {
      class com.example.keepmoneyv3.ui.wishlist.WishListsViewModel {
          - mText : MutableLiveData<String>
          + WishListsViewModel()
          + getText()
      }
    }
  }
  

  com.example.keepmoneyv3.ui.wishlist.WishListsFragment -up-|> androidx.fragment.app.Fragment
  com.example.keepmoneyv3.ui.wishlist.WishListsFragment o-- com.example.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener : listener
  com.example.keepmoneyv3.ui.wishlist.WishListsFragment +-down- com.example.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener
  com.example.keepmoneyv3.ui.wishlist.WishListsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
